Fix for dropdowns in navbars who are aligned right #5

--- a/sass/activecell/components/_dropdowns.scss
+++ b/sass/activecell/components/_dropdowns.scss
@@ -35,3 +35,14 @@
     }
   }
 }
+
+@media (min-width: $grid-float-breakpoint) {
+  .navbar-right {
+    .dropdown-menu {
+      &:before {
+       left: auto;
+       right: 20px; 
+      }
+    }
+  }
+}
